--- a/client/Makefile
+++ b/client/Makefile
@@ -1,1 +1,9 @@
-CFLAGS+=-I ../include
+all:client
+
+CFLAGS+=-I ../include -Wall
+
+client:client.o
+	gcc $^ $(CFLAGS) -o $@
+
+clean:
+	rm -rf *.o client
